--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="wiewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Questin Heroes</h1>
+    <br>
+    <form method="get" action="/heroes">
+        <button>View Heroes</button>
+    </form>
+
 </body>
 </html>
