--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,11 @@
     <form method="get" action="/heroes">
         <button>View Heroes</button>
     </form>
+    <br>
+    <br>
+    <form method="get" action="/quests">
+        <button>View Quests</button>
+    </form>
 
 </body>
 </html>
